# Immersive-Technologies

./: .gitignore  AGENTS.md  CLAUDE.md  Readme.md  pyproject.toml
Assets/: Bat with animation and FPS and TPS.prefab  Bat.controller  BatsInstantiate.cs  Behaviourchange.cs  Camercontroller.cs  FlyingBat.cs  MasterController.cs  Objectinstantiator.cs  Pickuplight.cs  Teleporter.cs  bat.anim
Assets/Animation/: Bat.controller  BatBobing.anim
Assets/Material/: Bat.mat  Grass.mat  Road.mat  Tree.mat  Water.mat
Assets/Materials/: Bat.mat
Assets/Prefabs/: StreetLights2.prefab
Assets/Scenes/: SampleScene.unity
Assets/Script/: Pathfollow.cs  Trigger.cs
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Nordark Package/: readme.md
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
